--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
     "next": "11.0.1",
