--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
+    "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
