--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,19 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.1.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.13.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.6.3",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
