--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
+    "markdown-to-jsx": "^7.1.3",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
