--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.12.2"
+    "react-hook-form": "^7.12.2",
+    "recharts": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
