--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.12.2",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
+    "recharts": "^2.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
