--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.13.5",
+    "mongoose-float": "^1.0.4",
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.3",
     "nodemailer-sendgrid-transport": "^0.2.0"
