--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,14 @@
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
     "markdown-to-jsx": "^7.1.3",
+    "moment": "^2.29.1",
     "next": "^11.1.0",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
+    "react-moment": "^1.1.1",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "recharts": "^2.1.2",
