--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "graphql": "^15.5.1",
+    "graphql-iso-date": "^3.6.1",
     "graphql-merge-resolvers": "^1.1.16",
     "graphql-request": "^3.5.0",
     "http-errors": "~1.6.3",
