--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-merge-resolvers": "^1.1.16",
     "graphql-request": "^3.5.0",
+    "graphql-subscriptions": "^1.2.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.13.8",
