--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
     "apollo-server-express": "^3.1.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
+    "firebase-admin": "^9.11.1",
     "graphql": "^15.5.1",
     "graphql-merge-resolvers": "^1.1.16",
     "graphql-request": "^3.5.0",
@@ -21,7 +23,8 @@
     "mongoose-float": "^1.0.4",
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.3",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
