--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@devexpress/dx-react-core": "^2.7.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
