--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,24 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material/linear-progress": "^12.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
     "convert-vapid-public-key": "^1.0.2",
     "cross-env": "^7.0.3",
+    "enzyme-adapter-react-17-updated": "^1.0.2",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.1",
+    "jest-dom": "^4.0.0",
+    "jest-enzyme": "^7.1.2",
     "localforage": "^1.10.0",
     "markdown-to-jsx": "^7.1.3",
     "moment": "^2.29.1",
@@ -36,6 +44,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-moment": "^1.1.1",
+    "react-otp-input": "^2.4.0",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "recharts": "^2.1.2",
@@ -43,8 +52,10 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "babel-jest": "^27.2.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "jest": "^27.2.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
