--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.4.8",
@@ -21,6 +22,7 @@
     "classnames": "^2.3.1",
     "convert-vapid-public-key": "^1.0.2",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.4",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "framer-motion": "^4.1.17",
@@ -30,6 +32,7 @@
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "next-offline": "^5.0.5",
+    "next-router-mock": "^0.5.2",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -40,11 +43,20 @@
     "react-qr-scanner": "^1.0.0-alpha.7",
     "recharts": "^2.1.2",
     "sharp": "^0.29.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "waait": "^1.0.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "babel-jest": "^27.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-17-updated": "^1.0.2",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.0",
+    "react-test-renderer": "^17.0.2"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
