--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.4.8",
+    "@apollo/react-testing": "^4.0.0",
     "@devexpress/dx-react-chart": "^2.7.6",
     "@devexpress/dx-react-chart-material-ui": "^2.7.6",
     "@devexpress/dx-react-core": "^2.7.6",
@@ -20,12 +22,15 @@
     "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.2.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "apollo-mocked-provider": "^5.0.0",
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "classnames": "^2.3.1",
     "convert-vapid-public-key": "^1.0.2",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.4",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-17-updated": "^1.0.2",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
@@ -35,11 +40,16 @@
     "jest-enzyme": "^7.1.2",
     "localforage": "^1.10.0",
     "markdown-to-jsx": "^7.1.3",
+    "mock-apollo-client": "^1.2.0",
+    "mock-raf": "^1.0.1",
+    "mock-request-animation-frame": "^1.0.4",
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "next-offline": "^5.0.5",
+    "node-fetch": "^3.0.0",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
+    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
@@ -48,14 +58,20 @@
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "recharts": "^2.1.2",
+    "redux-mock-provider": "^1.0.0",
     "sharp": "^0.29.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "waait": "^1.0.5"
   },
   "devDependencies": {
-    "babel-jest": "^27.2.0",
+    "babel-jest": "^27.2.1",
+    "cypress": "^8.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
-    "jest": "^27.2.0"
+    "jest": "^27.2.1",
+    "jsdom": "17.0.0",
+    "jsdom-global": "3.0.2",
+    "mockdate": "^3.0.5"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
