--- a/server/package.json
+++ b/server/package.json
@@ -29,13 +29,17 @@
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mockery": "^2.1.0",
     "mongoose": "^5.13.8",
     "mongoose-float": "^1.0.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.1",
+    "nock": "^13.1.3",
     "nodemailer": "^6.6.3",
+    "nodemailer-mock": "^1.5.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "should": "^13.2.3",
     "supertest": "^6.1.6",
     "web-push": "^3.4.5"
   },
