--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
     "body-parser-graphql": "^1.1.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
