--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "apollo-mocked-provider": "^5.0.0",
+    "apollo-upload-client": "^16.0.0",
     "atob": "^2.1.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
@@ -46,8 +47,8 @@
     "moment": "^2.29.1",
     "next": "^11.1.2",
     "next-offline": "^5.0.5",
-    "node-fetch": "^3.0.0",
     "next-router-mock": "^0.5.2",
+    "node-fetch": "^3.0.0",
     "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-apollo": "^3.1.5",
