--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "graphql-request": "^3.5.0",
     "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^8.2.0",
+    "graphql-upload": "^12.0.0",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
